tests/negative/test_move_no_drop.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc foo (f:Foo::noDrop) () {
    >> f;
};

fnc main () () {};